# Bomberman

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  PirateBoy.mtl  README.md  amyrose.mtl  auteur  dna.txt
assets/: ._Bomb_texture.tga  ._Bomberman  ._GoldBomber  ._GoldNumemon  ._Mario  ._RedBomber  ._WhiteBomber  ._bomb.fbx  ._head_bomberman  ._man  amyrose.mtl  bomb.fbx  bomb.mtl  cub.mtl
assets/GoldBomber/: ._GoldBomber.dae  ._GoldBomber.mtl  ._Thumbs.db  GoldBomber.dae  GoldBomber.mtl  Thumbs.db
assets/GoldNumemon/: ._chr113.dae  ._chr113.fbx  (+2 more)
client/: CMakeCache.txt  CMakeLists.txt  Makefile  NEWCMAKELISTS.TXT  README.md  bomberman.properties  cmake_install.cmake  test.properties
client/assets/: ._MegaBomb  ._N64 Cube  ._grass.mtl  ._test.fbx  brick.mtl  grass.mtl  ground.mtl  test.fbx  test.mtl
client/assets/GoldNumemon/: ._chr113.smd  chr113.smd
client/assets/Goomba/: Readme.txt  goomba.mtl
client/assets/N64 Cube/: ._N64 Cube.blend  ._N64 Cube.mtl  ._Textures
client/assets/RedBomber/: ._RedBomber.mtl  ._Thumbs.db  ._p001_n.psk  RedBomber.dae
client/assets/Vegetation/: crate.mtl  grass.mtl  palm.mtl  plant.mtl
client/assets/WhiteBomber/: ._Thumbs.db  ._WhiteBomber.dae  ._WhiteBomber.mtl  WhiteBomber.mtl
client/assets/blocks/: ._Flamme.mtl  ._Flamme_N.tga  ._mur1.tga  ._mur1_N.tga  ._sol1.mtl  sol1.mtl
client/assets/bomberman_animations/: base.blend  base.blend1  base.fbx  test.mtl
client/assets/bomberman_animations/walk/: 0.mtl  1.mtl  1v.mtl
client/assets/door/: ._tex  Door.mtl  dor.mtl
client/assets/door/tex/: ._GEN_EXT_Tunnel_Socket_Cap_Diffuse.tga  ._GEN_EXT_Tunnel_Socket_Cap_Normalmap.tga  ._GEN_EXT_Tunnel_Socket_Cap_Specular.tga  GEN_EXT_Tunnel_Socket_Cap_Diffuse.tga  GEN_EXT_Tunnel_Socket_Cap_Normalmap.tga
client/assets/dumpster/: ._Dumpster.mtl  ._Dumpster_D.tga  ._Dumpster_N.tga  Dumpster.mtl
client/assets/head_bomberman/: ._head.psd
client/assets/launch_bomb_anim/: 1.mtl  base.mtl
client/assets/reserved/: canvas.frag  global.frag
client/assets/shaders/: ._canvas.frag  Simple.vs  bomb.frag  bomb.vert  door.frag  door.vert  global.frag  global.vert  player.frag
client/assets/skybox/: skybox-flip.mtl  skybox.mtl  skybox2.mtl  skydome-flip.mtl
client/assets/textures/: grass.mtl
client/assets/textures/blocks/: ._brick.mtl  ._carled.mtl  ._mur1.mtl  ._red.mtl  ._yellow.mtl  Flamme.mtl  brick.mtl  carled.mtl  mur1.mtl  mur1low.mtl  red.mtl  sol1low.mtl  yellow.mtl
client/assets/textures/bonus/: bomb-up.mtl  power-up.mtl  speed-up.mtl
client/includes/: Bomberman.hpp  Factory.hpp
client/includes/AI/: AI.hpp  A_star.hpp  Module_h.hpp
client/includes/client/: BombermanClient.hpp  Loader.hpp
client/includes/enums/: BlockType.hpp
client/includes/graphics/: Camera.hpp  GameObject.hpp  Scene.hpp  UIInterface.hpp
client/includes/graphics/canvas/: Button.hpp  Canvas.hpp  Image.hpp  Input.hpp  Square.hpp  Tag.hpp  Text.hpp
client/includes/graphics/components/: Animator.hpp  BoxCollider.hpp  Model.hpp  Script.hpp
client/includes/graphics/keys/: KeyBoard.hpp  Mouse.hpp
client/includes/graphics/loop/: RenderLoop.hpp
client/includes/managers/: ActionQueueManager.hpp  DoorManager.hpp  MapManager.hpp  SaveManager.hpp
client/includes/models/: ActionQueue.hpp  Case.hpp  Map.hpp
client/includes/network/: MessageHandler.hpp  Socket.hpp
client/includes/scenes/: CreditScene.hpp  EndGameScene.hpp  GameScene.hpp  MainMenuScene.hpp  SettingScene.hpp  SoloMenuScene.hpp
client/includes/scripts/GameScene/: BombControllerScript.hpp  BonusControllerScript.hpp  BotControllerScript.hpp  CharacterControllerScript.hpp  DoorControllerScript.hpp  ExplosionControllerScript.hpp  GoombaControllerScript.hpp  IAControllerScript.hpp
client/includes/ui/: CreditInterface.hpp  EndGameInterface.hpp  GameInterface.hpp  MainMenuInterface.hpp  QuitMenuInterface.hpp  SettingInterface.hpp  SoloMenuInterface.hpp  StartGameInterface.hpp
client/includes/utils/: CSSInterpretor.hpp  ColorUtils.hpp  GetMaps.hpp  Properties.hpp  Random.hpp  ShaderUtils.hpp  TimeUtils.hpp
client/maps/: map_01  map_02  map_03  map_04  map_05
client/natives/apple/lib/: libSDL2.dylib  libSDL2_image.dylib  libSDL2_mixer.dylib  libSDL2_ttf.dylib  libglm.dylib
client/srcs/: Factory.cpp
client/srcs/AI/: AI.cpp  A_star.cpp  Module_h.cpp  save
client/srcs/client/: BombermanClient.cpp  Loader.cpp
client/srcs/graphics/: Camera.cpp  GameObject.cpp  Scene.cpp  UIInterface.cpp
client/srcs/graphics/canvas/: Button.cpp  Canvas.cpp  Image.cpp  Input.cpp  Square.cpp  Tag.cpp  Text.cpp
client/srcs/graphics/components/: Animator.cpp  BoxCollider.cpp  Model.cpp  Script.cpp
client/srcs/graphics/keys/: KeyBoard.cpp  Mouse.cpp
client/srcs/graphics/loop/: RenderLoop.cpp
client/srcs/managers/: ActionQueueManager.cpp  DoorManager.cpp  MapManager.cpp  SaveManager.cpp
client/srcs/models/: ActionQueue.cpp  Map.cpp
client/srcs/network/: MessageHandler.cpp  Socket.cpp
client/srcs/scenes/: CreditScene.cpp  EndGameScene.cpp  GameScene.cpp  MainMenuScene.cpp  SettingScene.cpp  SoloMenuScene.cpp
client/srcs/scripts/GameScene/: BombControllerScript.cpp  BonusControllerScript.cpp  BotControllerScript.cpp  CharacterControllerScript.cpp  DoorControlerScript.cpp  ExplosionControllerScript.cpp  GoombaControllerScript.cpp  IAControllerScript.cpp
client/srcs/ui/: CreditInterface.cpp  EndGameInterface.cpp  GameInterface.cpp  MainMenuInterface.cpp  QuitMenuInterface.cpp  SettingInterface.cpp  SoloMenuInterface.cpp  StartGameInterface.cpp
client/srcs/utils/: CSSInterpretor.cpp  ColorUtils.cpp  GetMaps.cpp  Properties.cpp  Random.cpp  ShaderUtils.cpp  TimeUtils.cpp  file_get_contents.cpp  replace_all.cpp  split.cpp  trim.cpp
client/themes/: CreditInterface.html  EndGameInterface.html  GameInterface.html  MainMenuInterface.html  QuitMenuInterface.html  SettingInterface.html  SoloMenuInterface.html  StartGameInterface.html
includes/: Bomberman.hpp  Factory.hpp
maps/: map_01
network/: Makefile
server/: Makefile  bomber_server
srcs/: Factory.cpp  Main.cpp  SimpleWindow.cpp
(+165 files in other folders)
